# duckpgq-extension

./: CMakeLists.txt
.github/workflows/: MainDistributionPipeline.yml
src/: duckpgq_extension.cpp
src/core/functions/scalar/: cheapest_path_length.cpp  csr_creation.cpp  csr_deletion.cpp  csr_get_w_type.cpp  iterativelength.cpp
src/core/functions/table/: describe_property_graph.cpp  drop_property_graph.cpp  match.cpp  pgq_scan.cpp
src/core/operator/: duckpgq_bind.cpp
src/core/parser/: CMakeLists.txt  duckpgq_parser.cpp  path_element.cpp  path_pattern.cpp  path_reference.cpp  property_graph_table.cpp  subpath_element.cpp
src/core/parser/parsed_data/: CMakeLists.txt  create_property_graph_info.cpp  drop_property_graph_info.cpp
src/core/parser/tableref/: CMakeLists.txt  matchref.cpp
src/include/: duckpgq_extension.hpp  duckpgq_state.hpp
src/include/duckpgq/core/common/vector_operations/: quaternary_executor.hpp
src/include/duckpgq/core/functions/table/: create_property_graph.hpp  describe_property_graph.hpp  drop_property_graph.hpp  match.hpp  summarize_property_graph.hpp
src/include/duckpgq/core/parser/: duckpgq_parser.hpp  path_element.hpp  path_pattern.hpp  path_reference.hpp  property_graph_table.hpp  subpath_element.hpp
src/include/duckpgq/core/parser/parsed_data/: create_property_graph_info.hpp  drop_property_graph_info.hpp
src/include/duckpgq/core/parser/tableref/: matchref.hpp
src/include/duckpgq/core/utils/: compressed_sparse_row.hpp
